Fix logo on mobile view

--- a/Css/main.css
+++ b/Css/main.css
@@ -72,7 +72,7 @@ button {
     width: 340px;
 }
 
-.img-fluid {
+.img-fluid {    
     min-width: 150px;
 }
 
@@ -93,9 +93,16 @@ button {
     width: 220px;
     display: inline-block;
 }
+.img-size-my{
+    width: 150px;
+    height: 150px;
+}
 
 @media screen and (max-width: 600px) {
     .disappear {
       display: none;
     }
+    .changeSizeText{
+        font-size: 1.5em;      
+    }  
   }
